# Embodied-AI-Franka

./: .gitignore  README.md  add_noise.py  check_data.py  cure_dataset.py  custom_play.py  heal_data.py  pyproject.toml  xray_data.py
assets/usb_port/: USB Port.STEP  USB Port.mtl  USB Port.usd  usb_port.usd
assets/usb_stick/: Sandisk ultra flair.IGS  Sandisk ultra flair.STEP  Sandisk ultra flair.mtl  Sandisk ultra flair.usd  usb_stick.usd
docker/: Dockerfile
experiments/diffusion_policy_baseline/: README.md  play_diffusion.py  train_diffusion.py
experiments/ik_grasp_baseline/: README.md  collect_ik_grasp.py
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_deployment/franka_grasp_control/: CMakeLists.txt  README.md  package.xml
ros2_deployment/franka_grasp_control/config/: act_policy.yaml  customplay_policy.yaml  hybrid_policy.yaml
ros2_deployment/franka_grasp_control/scripts/: franka_act_policy_node.py  franka_customplay_ros_node.py  franka_hybrid_policy_node.py  franka_joint_publisher.py
ros2_deployment/franka_grasp_control/src/: grasp_node.cpp
scripts/: list_envs.py
scripts/act_policy/: README.md  augment_descent.py  clean_data.py  extract_actor_weights.py  play_act.py  train_diffusion.py
scripts/diffusion_policy/: train_act.py
scripts/robomimic/: README.md  play.py  train.py
scripts/rsl_rl/: README.md  eval_finetuned.py  play.py  train.py  train_finetune.py
scripts/vla_policy/: README.md  play_vla.py  train_vla.py
source/peg_in_hole/: setup.py
source/standalone/: collect_full_grasp.py  collect_full_grasp_vision.py  env.py  (+7 more)
(+13 files in other folders)
